add contact-us/success page

--- a/b-index.jade
+++ b/b-index.jade
@@ -32,7 +32,7 @@ html(lang="en")
 										li.services__recommends-item
 											include icons/checkmark
 											span small to middle scale
-									a.services__link.btn(href="#") Get more info
+									a.services__link.btn(href="/services/outsourse/b-index.html") Get more info
 							li.services__item.services__item--team(data-animation="fadeIn")
 								.services__item-wrapper
 									h3.services__title Staff Augmentation
@@ -44,7 +44,7 @@ html(lang="en")
 										li.services__recommends-item
 											include icons/checkmark
 											span app development across diverse technology verticals
-									a.services__link.btn(href="#") Get more info
+									a.services__link.btn(href="/services/outstaff/b-index.html") Get more info
 							li.services__item.services__item--relocation(data-animation="fadeInRight")
 								.services__item-wrapper
 									h3.services__title Relocation Specialist
@@ -56,7 +56,7 @@ html(lang="en")
 										li.services__recommends-item
 											include icons/checkmark
 											span extension of in-house application development teams
-									a.services__link.btn(href="#") Get more info
+									a.services__link.btn(href="/services/relocation/b-index.html") Get more info
 					.section__wrapper(data-animation="fadeIn")
 						p.section__text Learn more about each of these options and their difference 
 							a.link(href="/services") here
