--- a/styl/blocks/btn.styl
+++ b/styl/blocks/btn.styl
@@ -1,5 +1,7 @@
 .btn
-	display inline-block
+	display inline-flex
+	align-items center
+	justify-content center
 	box-sizing border-box
 	padding 1rem 2.5rem
 	font-family $main-font
