--- a/contact-us/success/b-index.jade
+++ b/contact-us/success/b-index.jade
@@ -10,7 +10,7 @@ html(lang="en")
 
 			main.page-content
 
-				section.section.section--first-after-menu.section--full-screen
+				section.section.section--first-after-menu.section--full-screen(data-animation="bounce")
 					.section__wrapper
 						h1.section__title Thank you for contacting us
 						p.section__text.section__text--with-margin-bottom We appreciate you contacting us. We will reply to you as soon as possible.<br>Have a great day!
