--- a/styl/blocks/section.styl
+++ b/styl/blocks/section.styl
@@ -151,8 +151,8 @@
 			background-image linear-gradient(to top, #ffffff, #f7f7f7)
 			
 		&--full-screen
-			.section__wrapper
-				margin auto
+			box-sizing border-box
+			height calc(100vh - 186px)
 			
 	.section__wrapper
 		&--tight
