--- a/portfolio/localisation/b-index.jade
+++ b/portfolio/localisation/b-index.jade
@@ -11,29 +11,29 @@ html(lang="en")
 
 			main.page-content
 
-				.project-switcher
+				.project-switcher(data-animation="bounceIn")
 					.project-switcher__wrapper
-						a.project-switcher__link.project-switcher__link--prev(href="#")
+						a.project-switcher__link.project-switcher__link--prev(href="/portfolio/social-travel/b-index.html")
 							span.project-switcher__arrow-icon
 								include ../../icons/arrow-go
 							span Previous Project
-						a.project-switcher__link.project-switcher__link--next(href="#")
+						a.project-switcher__link.project-switcher__link--next(href="/portfolio/booking/b-index.html")
 							span Next Project
 							span.project-switcher__arrow-icon
 								include ../../icons/arrow-go
 
-				section.section
+				section.section(data-animation="fadeInUp")
 					.section__wrapper
 						span.section__project-type Data Management
 						h1.section__title What was the challenge?
 						p.section__text Provide a solution for translation of an application in 32 languages.
 
-				section.section.section--approaches.approaches.approaches--localisation
+				section.section.section--approaches.approaches.approaches--localisation(data-animation="fadeInUp")
 					.section__wrapper
 						h2.section__title Challenge accepted
 						p.section__text To solve the problem of multiple languages our team developed an additional web application that managed project’s localization. The localization helper was an excellent tool to find untranslated or missing words/phrases in translations, securely protected content and prevented from damaging, pulled and gathered data that was previously stored in Google spreadsheets. It divided the users by their role and rights, tracked their activities and provided a backup for accumulated data.
 
-				section.section
+				section.section(data-animation="fadeInUp")
 					.section__wrapper.section__wrapper--tight
 						h2.section__title What technologies did we use?
 						ul.section__tags.tags
