--- a/portfolio/social-travel/b-index.jade
+++ b/portfolio/social-travel/b-index.jade
@@ -11,30 +11,30 @@ html(lang="en")
 
 			main.page-content
 
-				.project-switcher
+				.project-switcher(data-animation="bounceIn")
 					.project-switcher__wrapper
-						a.project-switcher__link.project-switcher__link--prev(href="#")
+						a.project-switcher__link.project-switcher__link--prev(href="/portfolio/gambling/b-index.html")
 							span.project-switcher__arrow-icon
 								include ../../icons/arrow-go
 							span Previous Project
-						a.project-switcher__link.project-switcher__link--next(href="#")
+						a.project-switcher__link.project-switcher__link--next(href="/portfolio/localisation/b-index.html")
 							span Next Project
 							span.project-switcher__arrow-icon
 								include ../../icons/arrow-go
 
-				section.section
+				section.section(data-animation="fadeInUp")
 					.section__wrapper
 						span.section__project-type Travel
 						h1.section__title What was the challenge?
 						p.section__text Create an engaging travel-oriented social network service. Build a platform that facilitates interaction between travel organizers, tourists, agencies, equipment stores. Consolidate network environment with e-commerce. 
 
-				section.section.section--approaches.approaches.approaches--social-travel
+				section.section.section--approaches.approaches.approaches--social-travel(data-animation="fadeInUp")
 					.section__wrapper
 						h2.section__title Challenge accepted
 						p.section__text.section__text--with-margin-bottom Our team of experts developed a social media application that enabled users to create, book activities (canoeing, climbing, horse-riding, hiking and mountaineering). The activities could be organized both by agencies as well as by single travelers.
 						p.section__text An e-commerce platform was integrated into the web application and facilitated processing not only activity payments but also allowed equipment stores to sell their products onsite. As a social media, the network provided feedback tools, reviews, commentaries, messaging.
 
-				section.section
+				section.section(data-animation="fadeInUp")
 					.section__wrapper.section__wrapper--tight
 						h2.section__title What technologies did we use?
 						ul.section__tags.tags
