main-nav safari bug fix, add old yow page

--- a/b-index.jade
+++ b/b-index.jade
@@ -57,11 +57,11 @@ html(lang="en")
 											include icons/checkmark
 											span extension of in-house application development teams
 									a.services__link.btn(href="/services/relocation/b-index.html") Get more info
-					.section__wrapper(data-animation="fadeIn")
+					.section__wrapper(data-animation="fadeInUp")
 						p.section__text Learn more about each of these options and their difference 
 							a.link(href="/services") here
 
-				section.section.section--main-color.section--bottom-with-gradient(data-animation="fadeIn")
+				section.section.section--main-color.section--bottom-with-gradient(data-animation="fadeInUp")
 					.section__wrapper
 						h2.section__title Our Added Value
 						p.section__text With delivering what we are most adept at - Distinctive Web Development - we provide our customers with
@@ -93,11 +93,11 @@ html(lang="en")
 											include icons/6-risk
 										span.main-features-item__descr Competence with fair value
 
-				section.section.section--small-padding-bottom(data-animation="fadeIn")
+				section.section.section--small-padding-bottom(data-animation="fadeInUp")
 					.section__wrapper
 						h2.section__title Our Expertise
 						p.section__text Our team is comprised of devoted professionals who have expertise in multiple areas. We build web products that work and last, advance your customer journey, target and keep your customers in the loop.
-				section.section.section--without-padding-top.section--small-padding-bottom(data-animation="fadeIn")
+				section.section.section--without-padding-top.section--small-padding-bottom(data-animation="fadeInUp")
 					.section__wrapper.section__wrapper--tight
 						.slider
 							.slider__switcher.switcher
