--- a/contact-us/b-index.jade
+++ b/contact-us/b-index.jade
@@ -53,6 +53,9 @@ html(lang="en")
 									li.social__item
 										a(href="https://www.linkedin.com/company/18188825/" target="_blank")
 											img(src="/images/png/services/linkedin.png", alt="linkedin icon", width="35")
+									li.social__item
+										a(href="https://twitter.com/uneed_web" target="_blank")
+											img(src="/images/png/services/twitter.png", alt="twitter icon", width="35")
 
 			include ../parts/b-footer
 			+b-footer("contact-us")
