--- a/parts/b-header.jade
+++ b/parts/b-header.jade
@@ -18,7 +18,7 @@ mixin b-header(modifier)
 						a(href="/portfolio/b-index.html") Portfolio
 					li.main-nav__item
 						a(href="/contact-us/b-index.html") Contact Us	
-		.page-header__wrapper
+		.page-header__wrapper(data-animation="pulse")
 			- if (modifier == "hp")
 				h1.page-header__title Distinctive Web Development
 				p.page-header__text Shaping your tech ideas with smart engineering, creating an outreach for your business. Where customers are eager to return.
