--- a/styl/blocks/approaches.styl
+++ b/styl/blocks/approaches.styl
@@ -12,3 +12,5 @@
 		background-image url("../photos/localisation/localisation-image-1.png")
 	&--social-travel
 		background-image url("../photos/social-travel/social-travel-image-1.png")
+	&--yow
+		background-image url("../photos/booking/booking-image-1.png")
