--- a/styl/blocks/main-features-item.styl
+++ b/styl/blocks/main-features-item.styl
@@ -1,3 +1,5 @@
+$animation-delay-step = 0.3s
+
 .main-features-item
 	display flex
 	align-items center
@@ -23,11 +25,13 @@
 		width 19rem
 		padding 1rem
 		padding-left 0
+		.main-features-item__icon-wrapper
+			animation-delay $animation-delay-step
 		for num in (3 4)
 			&:nth-child({num})
 				.main-features-item__icon-wrapper
-					animation-delay 0.3s
+					animation-delay $animation-delay-step*2
 		for num in (5 6)
 			&:nth-child({num})
 				.main-features-item__icon-wrapper
-					animation-delay 0.6s
+					animation-delay $animation-delay-step*3
