--- a/styl/blocks/on-game-score-block.styl
+++ b/styl/blocks/on-game-score-block.styl
@@ -1,3 +1,5 @@
+$animation-delay-step-rows = 0.2s
+
 .on-game-score-block__logos
 	position relative
 	display flex
@@ -17,11 +19,10 @@
 	
 .on-game-score-block__table
 	width 100%
-	border-collapse collapse
+	border-spacing 0 0.5rem
 	
 .on-game-score-block__table-row
 	align-items center
-	margin-top 0.6rem
 	background-color #f1f1f1
 	border none
 	&--grey
@@ -30,6 +31,9 @@
 		background-color #303030
 		.on-game-score-block__table-cell
 			color #ffde2b
+	for num in (1..5)
+		&:nth-child({num})
+			animation-delay $animation-delay-step-rows*num
 		
 .on-game-score-block__table-cell
 	padding 0
@@ -66,7 +70,8 @@
 		margin 0 auto
 
 	.on-game-score-block__logos
-		height 259px
+		height 280px
+		margin 0.5rem 0
 		
 @media $desktop-widths
 
