add project filter script

--- a/portfolio/on-game/b-index.jade
+++ b/portfolio/on-game/b-index.jade
@@ -37,37 +37,37 @@ html(lang="en")
 							.on-game-score-block__logo(data-animation="zoomIn")
 								img(src="../../images/on-game/united-logo.png", alt="united-logo")
 
-						table.on-game-score-block__table
+						table.on-game-score-block__table(data-animations-group)
 							tr.on-game-score-block__table-row(data-animation="fadeInDown")
-								td.on-game-score-block__table-cell.on-game-score-block__table-cell--logo.on-game-score-block__table-cell--columb(data-animation="pulse")
+								td.on-game-score-block__table-cell.on-game-score-block__table-cell--logo.on-game-score-block__table-cell--columb(data-animation="zoomIn")
 								td.on-game-score-block__table-cell win
 								td.on-game-score-block__table-cell.on-game-score-block__table-cell--score 6-4
 								td.on-game-score-block__table-cell lose
-								td.on-game-score-block__table-cell.on-game-score-block__table-cell--logo.on-game-score-block__table-cell--united(data-animation="pulse")
+								td.on-game-score-block__table-cell.on-game-score-block__table-cell--logo.on-game-score-block__table-cell--united(data-animation="zoomIn")
 							tr.on-game-score-block__table-row.on-game-score-block__table-row--grey(data-animation="fadeInDown")
-								td.on-game-score-block__table-cell.on-game-score-block__table-cell--logo.on-game-score-block__table-cell--columb(data-animation="pulse")
+								td.on-game-score-block__table-cell.on-game-score-block__table-cell--logo.on-game-score-block__table-cell--columb(data-animation="zoomIn")
 								td.on-game-score-block__table-cell lose
 								td.on-game-score-block__table-cell.on-game-score-block__table-cell--score 3-4
 								td.on-game-score-block__table-cell win
-								td.on-game-score-block__table-cell.on-game-score-block__table-cell--logo.on-game-score-block__table-cell--united(data-animation="pulse")
+								td.on-game-score-block__table-cell.on-game-score-block__table-cell--logo.on-game-score-block__table-cell--united(data-animation="zoomIn")
 							tr.on-game-score-block__table-row.on-game-score-block__table-row--dark(data-animation="fadeInDown")
-								td.on-game-score-block__table-cell.on-game-score-block__table-cell--logo.on-game-score-block__table-cell--columb(data-animation="pulse")
+								td.on-game-score-block__table-cell.on-game-score-block__table-cell--logo.on-game-score-block__table-cell--columb(data-animation="zoomIn")
 								td.on-game-score-block__table-cell win
 								td.on-game-score-block__table-cell.on-game-score-block__table-cell--score 6-3
 								td.on-game-score-block__table-cell lose
-								td.on-game-score-block__table-cell.on-game-score-block__table-cell--logo.on-game-score-block__table-cell--united(data-animation="pulse")
+								td.on-game-score-block__table-cell.on-game-score-block__table-cell--logo.on-game-score-block__table-cell--united(data-animation="zoomIn")
 							tr.on-game-score-block__table-row.on-game-score-block__table-row--grey(data-animation="fadeInDown")
-								td.on-game-score-block__table-cell.on-game-score-block__table-cell--logo.on-game-score-block__table-cell--columb(data-animation="pulse")
+								td.on-game-score-block__table-cell.on-game-score-block__table-cell--logo.on-game-score-block__table-cell--columb(data-animation="zoomIn")
 								td.on-game-score-block__table-cell win
 								td.on-game-score-block__table-cell.on-game-score-block__table-cell--score 6-4
 								td.on-game-score-block__table-cell lose
-								td.on-game-score-block__table-cell.on-game-score-block__table-cell--logo.on-game-score-block__table-cell--united(data-animation="pulse")
+								td.on-game-score-block__table-cell.on-game-score-block__table-cell--logo.on-game-score-block__table-cell--united(data-animation="zoomIn")
 							tr.on-game-score-block__table-row(data-animation="fadeInDown")
-								td.on-game-score-block__table-cell.on-game-score-block__table-cell--logo.on-game-score-block__table-cell--columb(data-animation="pulse")
+								td.on-game-score-block__table-cell.on-game-score-block__table-cell--logo.on-game-score-block__table-cell--columb(data-animation="zoomIn")
 								td.on-game-score-block__table-cell lose
 								td.on-game-score-block__table-cell.on-game-score-block__table-cell--score 3-4
 								td.on-game-score-block__table-cell win
-								td.on-game-score-block__table-cell.on-game-score-block__table-cell--logo.on-game-score-block__table-cell--united(data-animation="pulse")
+								td.on-game-score-block__table-cell.on-game-score-block__table-cell--logo.on-game-score-block__table-cell--united(data-animation="zoomIn")
 
 				section.section.project-features.project-features--on-game(data-animation="fadeInUp")
 					ul.project-features__list
@@ -87,37 +87,37 @@ html(lang="en")
 							h3.project-features__item-title Performance Improvement
 							p.project-features__item-descr Desktop app performance was improved from 9 seconds to 5 seconds, mobile app performance was drastically improved from 30 seconds to 4 seconds.
 
-				section.section.section--without-padding-bottom.section--projects-reverse.section--on-game-big
+				section.section.section--without-padding-bottom.section--projects-reverse.section--on-game-big(data-animation="fadeInUp")
 					.section__wrapper
 						section.section.section--without-padding-top.section--without-padding-bottom
-							.section__inner
+							.section__inner(data-animation="fadeInLeft")
 								h2.section__title Variety of sports
 								p.section__text The application allows users to follow their favorite teams, sportsmen, and sportswomen across more than 10 sports including Soccer, Basketball, Baseball, Hockey Tennis, Golf among others.
-							.section__decorative-img.section__decorative-img--on-game-phone-1
+							.section__decorative-img.section__decorative-img--on-game-phone-1(data-animation="fadeInRight")
 						section.section.section--without-padding-top.section--without-padding-bottom
-							.section__inner
+							.section__inner(data-animation="fadeInRight")
 								h2.section__title Real-time updates
 								p.section__text ON-GAME enables users to build a personalized feed and get the latest updates on the game. The users can customize ON-GAME in order to get instant alerts for upcoming games. The live commentary shows minute-by-minute match/game highlights.
-							.section__decorative-img.section__decorative-img--on-game-phone-2
+							.section__decorative-img.section__decorative-img--on-game-phone-2(data-animation="fadeInLeft")
 						section.section.section--without-padding-top.section--without-padding-bottom
-							.section__inner
+							.section__inner(data-animation="fadeInLeft")
 								h2.section__title Statistics
 								p.section__text The application includes detailed statistics, schedules, makes possible to display team standings, fixtures, pre-match lineups, close game situations.
-							.section__decorative-img.section__decorative-img--on-game-phone-3
+							.section__decorative-img.section__decorative-img--on-game-phone-3(data-animation="fadeInRight")
 
-				section.section.section--on-game-technologies
+				section.section.section--on-game-technologies(data-animation="fadeInUp")
 					.section__wrapper
 						h2.section__title Technologies
 						p.section__text For development of a sports betting application ON-GAME our engineering team used the following set of tools.
 						ul.section__tags.tags.tags--on-game
-							li.tags__item AngularJS
-							li.tags__item Jade
-							li.tags__item Stylus
-							li.tags__item Jasmine
-							li.tags__item lodash
-							li.tags__item Yeoman
-							li.tags__item Google Maps
-							li.tags__item Geolocation
+							li.tags__item(data-animation="zoomIn") AngularJS
+							li.tags__item(data-animation="zoomIn") Jade
+							li.tags__item(data-animation="zoomIn") Stylus
+							li.tags__item(data-animation="zoomIn") Jasmine
+							li.tags__item(data-animation="zoomIn") lodash
+							li.tags__item(data-animation="zoomIn") Yeoman
+							li.tags__item(data-animation="zoomIn") Google Maps
+							li.tags__item(data-animation="zoomIn") Geolocation
 						a.section__btn.btn.btn--on-game Next projects
 		
 			include ../../parts/b-footer
