--- a/styl/blocks/project-item.styl
+++ b/styl/blocks/project-item.styl
@@ -1,5 +1,6 @@
 .project-item
 	position relative
+	display none
 	box-sizing border-box
 	width 100%
 	min-height 25rem
@@ -34,6 +35,9 @@
 		
 	&--data
 		background-image url("../photos/localisation/localisation-portfolio-grid.png")
+		
+	&--visible
+		display block
 
 	&::before
 		content ""
