--- a/styl/blocks/section.styl
+++ b/styl/blocks/section.styl
@@ -43,15 +43,15 @@
 		background-repeat no-repeat
 		background-size 320px, cover
 		background-position bottom, center
-		
-		// background-image url("../images/on-game/image-3.png")
-		// background-size auto 100%
 		.section__wrapper
 			width 100%
 		.section__title
 			color #dbdbdb
 		.section__text
 			color #fff
+		.section
+			> *
+				animation-delay 0.3s
 	&--on-game-technologies
 		background-image url("../images/on-game/on-game-yellow.png")
 		background-repeat no-repeat
