--- a/portfolio/b-index.jade
+++ b/portfolio/b-index.jade
@@ -21,10 +21,10 @@ html(lang="en")
 							.switcher.switcher--tight(data-animation="fadeInDown")
 								button.switcher__btn.switcher__btn--prev(type="button")
 									include ../icons/left-arrow
-								h3.switcher__name.switcher__name--active All
-								h3.switcher__name Web Development
-								h3.switcher__name Mobile Development
-								h3.switcher__name Product Design
+								h3.switcher__name.switcher__name--active(data-type="all") All
+								h3.switcher__name(data-type="web") Web Development
+								h3.switcher__name(data-type="mobile") Mobile Development
+								h3.switcher__name(data-type="design") Product Design
 								button.switcher__btn.switcher__btn--next(type="button")
 									include ../icons/left-arrow
 							ul.projects-gallery__list(data-animations-group)
@@ -35,7 +35,7 @@ html(lang="en")
 										p.project-item__descr Development of a web application for a travel company with a complete customer planning journey features.
 										a.project-item__link-btn.btn(href="/portfolio/booking/b-index.html") Details
 											include ../icons/arrow-go
-								li.project-item.project-item--entertaiment(data-animation="zoomIn" data-type="web")
+								li.project-item.project-item--entertaiment(data-animation="zoomIn" data-type="mobile")
 									.project-item__wrapper
 										span.project-item__type Web Development
 										h4.project-item__title Entertainment
@@ -49,7 +49,7 @@ html(lang="en")
 										p.project-item__descr Our own mobile application that keeps track of the places you visit and shows your exploration progress.
 										a.project-item__link-btn.btn(href="/portfolio/yow/b-index.html") Details
 											include ../icons/arrow-go
-								li.project-item.project-item--banking(data-animation="zoomIn" data-type="web")
+								li.project-item.project-item--banking(data-animation="zoomIn" data-type="web design")
 									.project-item__wrapper
 										span.project-item__type Web Development
 										h4.project-item__title Banking / Finance
@@ -70,7 +70,7 @@ html(lang="en")
 										p.project-item__descr Creation of an engaging travel-oriented social network service with an embedded e-commerce platform.
 										a.project-item__link-btn.btn(href="/portfolio/social-travel/b-index.html") Details
 											include ../icons/arrow-go
-								li.project-item.project-item--data(data-animation="zoomIn" data-type="web")
+								li.project-item.project-item--data(data-animation="zoomIn" data-type="web design")
 									.project-item__wrapper
 										span.project-item__type Web Development
 										h4.project-item__title Data Management
