--- a/styl/blocks/page-footer.styl
+++ b/styl/blocks/page-footer.styl
@@ -84,6 +84,10 @@
 	// .page-footer__subscribe
 	// 	width auto
 		
+	.page-footer__social
+		position relative
+		top 1rem
+		
 	.page-footer__contact
 		margin 0
 		text-align right
