add on-game link

--- a/portfolio/b-index.jade
+++ b/portfolio/b-index.jade
@@ -40,7 +40,7 @@ html(lang="en")
 										span.project-item__type Web Development
 										h4.project-item__title Entertainment
 										p.project-item__descr Development a web application for a sports betting company for the audience of 5 million users.
-										a.project-item__link-btn.btn(href="#") Details
+										a.project-item__link-btn.btn(href="/portfolio/on-game/b-index.html") Details
 											include ../icons/arrow-go
 								li.project-item.project-item--travel(data-animation="zoomIn" data-type="mobile")
 									.project-item__wrapper
